fix: prevent startup cycle and resource leaks